--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+# *.py[cod]
 *$py.class
 
 # C extensions
@@ -99,3 +99,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea/
+data/
